[package]
name = "ntbox"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
directories = "5.0.1"
elf = "0.7.2"
fern = { version = "0.6.2", features = ["colored"] }
iced = "0.9.0"
iced_winit = "0.9.1"
log = "0.4.17"
unicorn-engine = "2.0.1"
winit = "0.28.5"

[target.'cfg(android)'.dependencies]
ndk = "0.7.0"

[features]
default = ["release_log"]
release_log = []

